--- a/css/stylee.css
+++ b/css/stylee.css
@@ -122,6 +122,7 @@
 
         .btn {
             padding: 0.200rem 1rem;
+            background-color: white;
         }
 
 /*header desktop end*/
