--- a/templates/footer_finwin.html
+++ b/templates/footer_finwin.html
@@ -1,9 +1,6 @@
-<body>
-
-
 
     <div class="footer">
-        <div class="container-fluid" style="height: 350px;  background-color: #20252b;justify-content: center;
+        <div class="container-fluid" style="background-color: #20252b;justify-content: center;
         display: flex; ">
             <div class="row" style="padding: 0;/* margin: 0px 0px; */margin: 0;">
 
@@ -28,7 +25,7 @@
 
 
 
-                    <div class="row" style="width: 100%; height: 50px;  margin-top: 26px;">
+                    <div class="row" style="width: 100%;  margin-top: 26px;">
                         <div class="col-4" style="  width: 20%; float: left;">
                             <img src="images/test_series-300x185.jpg" alt="" style="
     width: 80px;
@@ -115,19 +112,19 @@
                 </div>
             </div>
         </div>
-        <div style="background-color: #1C2025; height: 50px;" class="container-fluid">
+        <div style="background-color: #1C2025;" class="container-fluid">
             <div class="row">
                 <div class="col-1">
 
                 </div>
-                <div style="text-align: center; height: 50px;" class="col-4">
+                <div style="text-align: center;" class="col-4">
                     <p style="margin-top: 13px;"> <a style="color: white; font-size: 12px; font-stretch: normal; font-family: lato-r;" href="https://www.quadbtech.com">Edusquare| © 2019 All rights reserved. Developed by QuadB Tech</a>
 
                 </div>
-                <div style=" height: 50px;" class="col-1">
+                <div class="col-1">
 
                 </div>
-                <div style=" height: 50px;display: flex;
+                <div style="display: flex;
                 text-align: center;" class="col-6">
                     <div style="margin: 13px 0px; font-size: 12px;font-family: lato-r;">
                         <a class="bottom_nav"  href="https://edusquare.co.in/">Home</a>
@@ -149,5 +146,3 @@
 
 
     </div>
-
-</body>
