--- a/templates/header_mobile_finwin.html
+++ b/templates/header_mobile_finwin.html
@@ -25,6 +25,8 @@
                         <a class="nav-link" href="https://edusquare.co.in/edusquare-in-news/">STUDENT AREA</a>
 
                     </li>
+                    <li class="nav-item"><a class="nav-link" href="https://edusquare.co.in/edusquare-in-news/">Edusquare In News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://rzp.io/l/wZbzaAK">Pay Installment</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://edusquare.co.in/result/">RESULTS</a>
                     </li>
